Change checklist type to checkboxes in issue template

--- a/.github/ISSUE_TEMPLATE/nasa-openscapes-workshop-template-form.yml
+++ b/.github/ISSUE_TEMPLATE/nasa-openscapes-workshop-template-form.yml
@@ -120,7 +120,7 @@ body:
     validations:
       required: false
 
-  - type: checklist
+  - type: checkboxes
     id: checklist-organizer-hub-poc
     attributes:
       label: Checklist for organizer and hub POC
