--- a/.github/ISSUE_TEMPLATE/nasa-openscapes-workshop-template-form.yml
+++ b/.github/ISSUE_TEMPLATE/nasa-openscapes-workshop-template-form.yml
@@ -2,17 +2,14 @@ name: Request & Reserve Workshop Jupyter Hub
 description: Reserve the NASA Openscapes Jupyter Hub for your workshop
 title: "[Workshop]: YYYY-MM-DD <brief description>"
 labels: "workshop"
-projects: NASA-Openscapes/7
+projects: ["NASA-Openscapes/7"]
 assignees:
   - ateucher
 body:
   - type: markdown
     attributes:
       value: |
-        Thank you for your interest in hosting a workshop using the NASA
-        Openscapes Jupyter Hub! Please fill out the form below to request a
-        reservation. We will get back to you as soon as possible to confirm your
-        reservation.
+        Thank you for your interest in hosting a workshop using the NASA Openscapes Jupyter Hub! Please fill out the form below to request a reservation. We will get back to you as soon as possible to confirm your reservation.
 
   - type: textarea
     id: workshop-description
@@ -135,7 +132,7 @@ body:
         - label: |
             **Organizer**: Submit a ticket by email to 2i2c for the workshop [as per instructions](https://openscapes.cloud/password-access.html), cc'ing hub POC.
         - label: |
-            **Hub POC**: Confirm `[Event]` issue opened by 2i2c in response to ticket ([example](https://github.com/2i2c-org/infrastructure/issues/5466))
+            **Hub POC**: Confirm `[Event]` issue opened in [2i2c-org/infrastructure](https://github.com/2i2c-org/infrastructure/) in response to ticket ([example](https://github.com/2i2c-org/infrastructure/issues/5466))
         - label: |
             **Hub POC**: Add new password and dates to [workshop password spreadsheet](https://docs.google.com/spreadsheets/d/1Y4qzqWLsKHTNzuQi-fOaHGud0Ld_q1GHAzhS9-grV7Q/edit?gid=1793413915).
         - label: |
