try project syntax again

--- a/.github/ISSUE_TEMPLATE/nasa-openscapes-workshop-template-form.yml
+++ b/.github/ISSUE_TEMPLATE/nasa-openscapes-workshop-template-form.yml
@@ -2,7 +2,7 @@ name: Request & Reserve Workshop Jupyter Hub
 description: Reserve the NASA Openscapes Jupyter Hub for your workshop
 title: "[Workshop]: YYYY-MM-DD <brief description>"
 labels: "workshop"
-projects: ["NASA-Openscapes/7"]
+projects: ["nasa-openscapes/7"]
 assignees:
   - ateucher
 body:
