--- a/.github/ISSUE_TEMPLATE/nasa-openscapes-workshop-template-form.yml
+++ b/.github/ISSUE_TEMPLATE/nasa-openscapes-workshop-template-form.yml
@@ -4,7 +4,8 @@ title: "[Workshop]: YYYY-MM-DD <brief description>"
 labels: "workshop"
 assignees:
   - ateucher
-projects: ["NASA-Openscapes/7"]
+projects: 
+  - "NASA-Openscapes/7"
 body:
   - type: markdown
     attributes:
